--- a/src/zomato_eta.ipynb
+++ b/src/zomato_eta.ipynb
@@ -53,7 +53,7 @@
     "# from components.data_visualization import DataVisualization\n",
     "# from components.data_export import DataExport\n",
     "\n",
-    "from configs.configs import ROOT_DIR\n",
+    "from config.configs import ROOT_DIR\n",
     "RAW_DATA_DIR = ROOT_DIR / 'data' / 'raw_data'\n",
     "\n",
     "data_ingestor = DataIngestion(raw_data_dir=RAW_DATA_DIR)\n",
